# PAI_2025_PAILLARD_BURTON-Outil-Etiquetage-radiographies-_MAJ

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yaml
cookiecutter_output/: pyproject.toml
cookiecutter_output/.github/: pull_request_template.md
cookiecutter_output/docs/: conf.py  pai_2025_outil_etiquetage_radiographies.rst
cookiecutter_output/pai_2025_outil_etiquetage_radiographies/: main_nicegui.py
cookiecutter_output/test_pai_2025_outil_etiquetage_radiographies/: basic_test.py
docs/: index.rst
pai_2025_outil_etiquetage_radiographies/: analysis_export.py  annotations_tab.py  auth_dialog.py  data_manager.py  main_qt.py  stats_dialog.py  visualization_tab.py
pai_2025_outil_etiquetage_radiographies/pathology_references/: Atelectasis.json  Cardiomegaly.json  Consolidation.json  Edema.json  Effusion.json  Emphysema.json  Fibrosis.json  Hernia.json  Infiltration.json  Mass.json  No_Finding.json  Nodule.json  Pleural_Thickening.json  Pneumonia.json  Pneumothorax.json
test_pai_2025_outil_etiquetage_radiographies/: test_data_manager.py
