[project]
name = "PAI_2025_PAILLARD_BURTON-Outil-Etiquetage-radiographies-_MAJ"
version = "0.1.0"
description = ""

authors = [
    { name = "Mathis Paillard" },
    { name = "Cristobal Burton" },
]
requires-python = ">=3.10, <3.14"
readme = "README.md"
dependencies = [
    "pandas[parquet]>=2,<3",
    "nicegui[native]>=2,<3",
    "pyside6>=6.5,<6.10",
    "Pillow>=10,<11",
    "matplotlib>=3.8,<4",
]


[project.scripts]
main_ng = "pai_2025_outil_etiquetage_radiographies.main_nicegui:run"
main_qt = "pai_2025_outil_etiquetage_radiographies.main_qt:run"

[dependency-groups]
test = [
    "pytest",
    "coverage",
    "pandas-stubs",
    "pytest-sugar",
    "pyright",
    "ruff",
]
docs = [
    "Sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "jupyter",
    "nbsphinx",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "ipython",
    "sphinx-favicon",
    "sphinx-argparse",
]

[tool.uv]
default-groups = [
    "test",
    "docs",
]

[tool.hatch.build.targets.sdist]
include = ["pai_2025_outil_etiquetage_radiographies"]

[tool.hatch.build.targets.wheel]
include = ["pai_2025_outil_etiquetage_radiographies"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pydoclint]
style = 'google'
arg-type-hints-in-docstring = false
skip-checking-raises = true
allow-init-docstring = true
check-return-types = false
check-yield-types = false

[tool.pytest.ini_options]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
addopts = "--import-mode=importlib --doctest-modules"
testpaths = ["test_pai_2025_outil_etiquetage_radiographies", "pai_2025_outil_etiquetage_radiographies"]

[tool.coverage.run]
source = ["pai_2025_outil_etiquetage_radiographies"]

[tool.pyright]
typeCheckingMode = "basic"
reportOptionalMemberAccess = false
reportArgumentType = false
reportAttributeAccessIssue = false
reportOptionalOperand = false
